fix gap nav

--- a/src/sass/media/_1760px.sass
+++ b/src/sass/media/_1760px.sass
@@ -75,7 +75,7 @@
         font-size: 12px
         margin-top: 2px
     &-nav, .nav
-      gap: 30px
+      gap: 20px
       li
         height: 36px
     &-burger
@@ -1111,8 +1111,7 @@
 @media(max-width: 1439px)
   .header
     &-nav, .nav
-      gap: 20px
-
+      gap: 15px
   .popup
     &[data-popup="online"]
       .popup-wrapper
